Version 0.9.1
(not yet released)
------------------------------------------

	* 9-21-05: Fixed a bug in the SpeechRecognizer class that caused a deadlock when disabling speech recognition.  The deadlock only became apparent after testing it on a multi-core machine.


Version 0.9.0
August 3, 2005
------------------------------------------

	* 8-3-05: Initial version.